# OxocardBackend

./: .gitignore  main.py  pyproject.toml
oxocardendpoint/: database.py
oxocardendpoint/controllers/: sensor_controller.py
oxocardendpoint/entities/: sensor.py
oxocardendpoint/models/: create_sensor_model.py  sensor_data_model.py  sensor_model.py  value_per_hour_model.py
oxocardendpoint/services/: base_service.py  sensor_data_service.py  sensor_service.py
